Test improve performance
Signed-off-by: Andre Kurait <akurait@amazon.com>